--- a/styles.css
+++ b/styles.css
@@ -39,7 +39,7 @@
     gap: 10px;
 }
 
-.number-button, .operator-button, .equal-button {
+.number-button, .operator-button, .equal-button, .clear-button {
     color: grey;
     width: 80px;
     height: 80px;
@@ -59,4 +59,9 @@
 .equal-button {
     color: white;
     background-color: mediumpurple;
+}
+
+.clear-button {
+    color: white;
+    background-color: cadetblue;
 }
