--- a/styles.css
+++ b/styles.css
@@ -30,6 +30,9 @@
     height: 100px;
     border-radius: 20px;
     background-color: silver;
+    display: flex;
+    align-items: center;
+    padding: 10px;
 }
 
 .calculator-buttons {
