--- a/styles.css
+++ b/styles.css
@@ -32,6 +32,7 @@
     background-color: silver;
     display: flex;
     align-items: center;
+    justify-content: flex-end;
     padding: 10px;
 }
 
