--- a/styles.css
+++ b/styles.css
@@ -43,7 +43,7 @@
     gap: 10px;
 }
 
-.number-button, .operator-button, .equal-button, .clear-button {
+.number-button, .operator-button, .equal-button, .clear-button, .delete-button {
     color: grey;
     width: 80px;
     height: 80px;
@@ -68,4 +68,8 @@
 .clear-button {
     color: white;
     background-color: cadetblue;
+}
+
+.delete-button {
+    background-color: blanchedalmond;
 }
