--- a/styles.css
+++ b/styles.css
@@ -6,9 +6,13 @@
     color: grey;
 }
 
+html, body {
+    height: 100%;
+}
+
 .main-container {
     width: 100vw;
-    height: 100vh;
+    height: 100%;
     background-color: #675673;
     display: flex;
     align-items: center;
