--- a/styles.css
+++ b/styles.css
@@ -19,8 +19,8 @@ html, body {
 }
 
 .calculator {
-    width: 400px;
-    height: 600px;
+    width: 30vw;
+    height: 90vh;
     background-color: #689B8A;
     border: 2px solid #66b0ab;
     border-radius: 20px;
@@ -33,8 +33,8 @@ html, body {
 }
 
 .calculator-display {
-    width: 360px;
-    height: 100px;
+    width: 28vw;
+    height: 15vh;
     border: 2px solid #66b0ab;
     border-radius: 20px;
     background-color: #78B9B5;
@@ -57,8 +57,8 @@ html, body {
 
 .number-button, .operator-button, .equal-button, .clear-button, .delete-button, .decimal-button, .negative-button {
     background-color: #78B9B5;
-    width: 80px;
-    height: 80px;
+    width: 13vh;
+    height: 13vh;
     border: 2px solid #66b0ab;
     border-radius: 20px;
     font-size: 25px;
